# SanketMCPServer

./: .gitignore  Dockerfile  README.md  auth.py  chat_manager.py  client.Dockerfile  clients.py  database.py  docker-compose.yml  fastmcp_quickstart.py  get_usage.py  nginx.conf  pyproject.toml  requirements.txt  server.Dockerfile  tui.py  users.py
mcp_perplexity_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp_test_new/: README.md  clients.py  requirements.txt  static
mcp_test_new/templates/: index.html
static/: script.js  style.css
templates/: index.html  login.html
